Use "help" cursor instead of "pointer"
I believe this is a more appropriate cursor as for tooltips. I read about the Safari bug in the comment, and I wasn't able to reproduce it on my iOS 13 / iPhone device nor my Macbook.

--- a/src/balloon.scss
+++ b/src/balloon.scss
@@ -36,7 +36,7 @@ button[aria-label] {
 
     // Fixing iOS Safari event issue.
     // More info at: https://goo.gl/w8JF4W
-    cursor: pointer;
+    cursor: help;
 
     &:after {
       @include base-effects();
